--- a/languages/c++/keywords.txt
+++ b/languages/c++/keywords.txt
@@ -1,22 +1,84 @@
-return
+alignas
+alignof
+and
+and_eq
+asm
+auto(1)
+bitand
+bitor
 bool
-for
-float
-int
-uint32
-uint64
-uint32_t
-uint64_t
-unsigned
-double
+break
+case
+catch
 char
-long 
-while
-do
-auto
-void
-inline
-template
+char16_t
+char32_t
 class
-typename
+compl
+const
+constexpr
+const_cast
+continue
+decltype
+default
+delete
+do
+double
+dynamic_cast
+else
+enum
+explicit
+export
+extern
+false
+float
+for
+friend
+goto
+if
+inline
+int
+long
+mutable
+namespace
+new
+noexcept
+not
+not_eq
+nullptr
+operator
+or
+or_eq
+private
+protected
+public
+register
+reinterpret_cast
+return
+short
+signed
+sizeof
+static
+static_assert
+static_cast
+struct
+switch
+template
+this
+thread_local
+throw
+true
+try
 typedef
+typeid
+typename
+union
+unsigned
+using
+virtual
+void
+volatile
+wchar_t
+while
+xor
+xor_eq
